<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_video" >
        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            android:icon="@drawable/ic_px_image_renderer"
            app2:useSimpleSummaryProvider="true"/>

        <Preference
            android:key="manageDrivers"
            android:persistent="false"
            android:summary="@string/driver_config_pref_subtitle"
            android:title="@string/driver_config_pref_title"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_px_viewport_expand"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/resolution_seekbar_min"
            app2:seekBarIncrement="@integer/resolution_seekbar_increment"
            android:icon="@drawable/ic_px_resolution"
            />

        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="use_angle"
            android:summary="@string/preference_use_angle_description"
            android:title="@string/preference_use_angle_title"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"/>
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vsync_in_zink"
            android:summary="@string/preference_vsync_in_zink_description"
            android:title="@string/preference_vsync_in_zink_title"
            />
        <SwitchPreference
            android:title="@string/preference_force_legacy_zink_title"
            android:summary="@string/preference_force_legacy_zink_description"
            android:key="zinkForceLegacy"
            android:defaultValue="false"
            />
        <SwitchPreference
            android:title="@string/preference_force_sfpew_title"
            android:summary="@string/preference_force_sfpew_description"
            android:key="forceSfpew"
            android:defaultValue="false"
            />
    </PreferenceCategory>
</PreferenceScreen>